--- a/_includes/1.0/overview/sorting.html
+++ b/_includes/1.0/overview/sorting.html
@@ -8,6 +8,6 @@
     </p>
     <p>
         Keep in mind that only certain endpoints and certain fields support this feature. Check the
-        "Available Sorting Fields" section of each EndPoint for available option names and fields.
+        "Available Sorting Options" section of each EndPoint for available option names and fields.
     </p>
 </div>
