--- a/css/main.css
+++ b/css/main.css
@@ -163,10 +163,7 @@ body {
 /* nested nested links */
 
 .bs-docs-sidebar .nav .nav .nav > li > a {
-    border: none;
-    padding-left: 95px;
-    font-size: 12px;
-    font-style: italic;
+    margin-left: 28px;
 }
 .bs-docs-sidebar .nav .nav > li:last-child {
     padding-bottom: 0;
@@ -176,6 +173,7 @@ body {
 /* all active links */
 .bs-docs-sidebar .nav>.active>a, .bs-docs-sidebar .nav>li>a:hover, .bs-docs-sidebar .nav>li>a:focus,
 .bs-docs-sidebar .nav .nav>.active>a, .bs-docs-sidebar .nav .nav>.active:hover>a, .bs-docs-sidebar .nav .nav>.active:focus>a,
+.bs-docs-sidebar .nav .nav .nav>.active>a, .bs-docs-sidebar .nav .nav .nav>.active:hover>a, .bs-docs-sidebar .nav .nav .nav>.active:focus>a,
 .bs-docs-sidebar .nav>li>a.selected, .bs-docs-sidebar .nav>.active>a, .bs-docs-sidebar .nav>.active:hover>a, .bs-docs-sidebar .nav>.active:focus>a {
     border-left: 2px solid #2e90c8;
     color: #2e90c8;
