--- a/_includes/1.0/overview/security/oauth2/exchange.html
+++ b/_includes/1.0/overview/security/oauth2/exchange.html
@@ -2,7 +2,7 @@
 
     <h2>Exchange the Authorization Code</h2>
 
-    {% highlight bash %}Endpoint: {{site.oauth2.protocol}}://{{ site.oauth2.base_url }}{{site.oauth2.endpoints.token.url}}{% endhighlight %}
+    {% highlight bash %}Endpoint: {{site.oauth2.protocol}}://{{ site.oauth2.domain }}{{site.oauth2.endpoints.token.url}}{% endhighlight %}
 
     <p>After receiving the Authorization code, your application has to exchange it for an access token.</p>
 
@@ -50,7 +50,7 @@
 
 {% highlight http %}
 POST {{site.oauth2.endpoints.token.url}} HTTP/1.1
-Host: {{ site.oauth2.base_url }}
+Host: {{ site.oauth2.domain }}
 Content-Type: application/x-www-form-urlencoded
 
 grant_type=authorization_code
@@ -61,7 +61,7 @@ grant_type=authorization_code
 {% endhighlight %}
 
 {% highlight bash %}
-curl -D- --request POST '{{site.oauth2.protocol}}://{{ site.oauth2.base_url }}{{site.oauth2.endpoints.token.url}}' \
+curl -D- --request POST '{{site.oauth2.protocol}}://{{ site.oauth2.domain }}{{site.oauth2.endpoints.token.url}}' \
 --header 'Content-Type: application/x-www-form-urlencoded' \
 --data-urlencode 'grant_type=authorization_code' \
 --data-urlencode 'client_id=xxxxxxxxxx' \
