--- a/_includes/1.0/overview/security/oauth2/pkce.html
+++ b/_includes/1.0/overview/security/oauth2/pkce.html
@@ -37,7 +37,7 @@
 
 {% highlight http %}
 POST {{site.oauth2.endpoints.authorization.url}} HTTP/1.1
-Host: {{ site.oauth2.base_url }}
+Host: {{ site.oauth2.domain }}
 Content-Type: application/x-www-form-urlencoded
 
 response_type=code
@@ -50,7 +50,7 @@ response_type=code
 {% endhighlight %}
 
 {% highlight bash %}
-curl -D- --request POST '{{site.oauth2.protocol}}://{{ site.oauth2.base_url }}{{site.oauth2.endpoints.authorization.url}}' \
+curl -D- --request POST '{{site.oauth2.protocol}}://{{ site.oauth2.domain }}{{site.oauth2.endpoints.authorization.url}}' \
 --header 'Content-Type: application/x-www-form-urlencoded' \
 --data-urlencode 'response_type=code' \
 --data-urlencode 'client_id=xxxxxxxxxx' \
@@ -82,7 +82,7 @@ curl -D- --request POST '{{site.oauth2.protocol}}://{{ site.oauth2.base_url }}{{
 
 {% highlight http %}
 POST {{site.oauth2.endpoints.token.url}} HTTP/1.1
-Host: {{ site.oauth2.base_url }}
+Host: {{ site.oauth2.domain }}
 Content-Type: application/x-www-form-urlencoded
 
 grant_type=authorization_code
@@ -94,7 +94,7 @@ grant_type=authorization_code
 {% endhighlight %}
 
 {% highlight bash %}
-curl -D- --request POST '{{site.oauth2.protocol}}://{{ site.oauth2.base_url }}{{site.oauth2.endpoints.token.url}}' \
+curl -D- --request POST '{{site.oauth2.protocol}}://{{ site.oauth2.domain }}{{site.oauth2.endpoints.token.url}}' \
 --header 'Content-Type: application/x-www-form-urlencoded' \
 --data-urlencode 'grant_type=authorization_code' \
 --data-urlencode 'client_id=xxxxxxxxxx' \
