--- a/_includes/1.0/overview/security/oauth2/refresh.html
+++ b/_includes/1.0/overview/security/oauth2/refresh.html
@@ -45,7 +45,7 @@
 
 {% highlight http %}
 POST {{site.oauth2.endpoints.token.url}} HTTP/1.1
-Host: {{ site.oauth2.base_url }}
+Host: {{ site.oauth2.domain }}
 Content-Type: application/x-www-form-urlencoded
 
 grant_type=refresh_token
@@ -55,7 +55,7 @@ grant_type=refresh_token
 {% endhighlight %}
 
 {% highlight bash %}
-curl -D- --request POST '{{site.oauth2.protocol}}://{{ site.oauth2.base_url }}{{site.oauth2.endpoints.token.url}}' \
+curl -D- --request POST '{{site.oauth2.protocol}}://{{ site.oauth2.domain }}{{site.oauth2.endpoints.token.url}}' \
 --header 'Content-Type: application/x-www-form-urlencoded' \
 --data-urlencode 'grant_type=refresh_token' \
 --data-urlencode 'client_id=xxxxxxxxxx' \
