--- a/_includes/1.0/overview/security/oauth2/using.html
+++ b/_includes/1.0/overview/security/oauth2/using.html
@@ -11,13 +11,13 @@
     <p><b>OneUp API</b></p>
 
 {% highlight http %}
-GET {{site.api.v1}}/xxxxxxxxxx HTTP/1.1
+GET {{site.api.v1}}/xxxxxxxxxx/ HTTP/1.1
 Host: {{ site.api.domain }}
 Authorization: Bearer xxxxxxxxxx
 {% endhighlight %}
 
 {% highlight bash %}
-curl -D- --request GET '{{site.api.protocol}}://{{ site.api.domain }}{{site.api.v1}}/xxxxx' \
+curl -D- --request GET '{{site.api.protocol}}://{{ site.api.domain }}{{site.api.v1}}/xxxxxxxxxx/' \
 --header 'Authorization: Bearer xxxxxxxxxx'
 {% endhighlight %}
 
