--- a/css/main.css
+++ b/css/main.css
@@ -301,7 +301,6 @@ body .primary-button {
     cursor: default;
 }
 
-
 th.name {
     width: 200px;
 }
@@ -319,6 +318,9 @@ th.read-only {
 }
 th.mandatory {
     width: 101px;
+}
+th.http-status {
+    width: 170px;
 }
 .ribbon {
     position: absolute;
