--- a/_includes/1.0/overview/security/oauth2/errors.html
+++ b/_includes/1.0/overview/security/oauth2/errors.html
@@ -2,7 +2,7 @@
 
     <h2>Handling Errors</h2>
 
-    <p>When any error occurs during the OAuth2, the user will be redirect to the <code>redirect_uri</code> which was sent during the start of the flow.</p>
+    <p>When an error occurs during the OAuth2, the user will be redirected to the <code>redirect_uri</code> which was sent during the start of the flow.</p>
 
     <div class="panel panel-warning">
         <div class="panel-heading">Note</div>
@@ -24,13 +24,13 @@
         <tbody>
             <tr>
                 <td>error</td>
-                <td>An unique string id indicating which error occurred<br>
+                <td>A unique string id indicating which error occurred<br>
                     Your application can use this id to map possible errors and handle it<br>
-                    See the table bellow for possible values for this field</td>
+                    See the table below for possible values for this field</td>
             </tr>
             <tr>
                 <td>error_description</td>
-                <td>A description of the error occurred</td>
+                <td>A description of the error that occurred</td>
             </tr>
             <tr>
                 <td>error_hint</td>
