--- a/_includes/1.0/overview/security/oauth2/using.html
+++ b/_includes/1.0/overview/security/oauth2/using.html
@@ -2,7 +2,7 @@
 
     <h2>Using the Access Token</h2>
 
-    <p>The Application can use the access token to authenticate you requests to OneUp API as well as transparently login the user in OneUp WEB Portal.</p>
+    <p>The Application can use the access token to authenticate requests to OneUp API as well as transparently login the user in OneUp WEB Portal.</p>
 
     <p>For both cases, the application must provide the token in the <code>Authorization</code> request header field.</p>
 
