adds more filters and sorting options.

--- a/_includes/1.0/api/creditmemo.html
+++ b/_includes/1.0/api/creditmemo.html
@@ -213,6 +213,44 @@
     <h3 id="creditmemojsonexample">JSON Example</h3>
     {% highlight bash %}{% include 1.0/api/json/credit_memo.json %}{% endhighlight %}
 
+    <h3 id="creditmemofilter">Available Filter Fields</h3>
+    <table class="table table-bordered table-striped">
+        <thead>
+        {% include table-header-filter.html %}
+        </thead>
+        <tbody>
+        <tr>
+            <td>customer_id</td>
+            <td>Filter by customer id.</td>
+        </tr>
+        </tbody>
+    </table>
+
+    <h3 id="creditmemosorting">Available Sorting Options</h3>
+    <table class="table table-bordered table-striped">
+        <thead>
+        {% include table-header-sorting.html %}
+        </thead>
+        <tbody>
+        <tr>
+            <td>id</td>
+            <td>Sorts by id field.</td>
+        </tr>
+        <tr>
+            <td>date</td>
+            <td>Sorts by date field.</td>
+        </tr>
+        <tr>
+            <td>created_at</td>
+            <td>Sorts by the creation date field.</td>
+        </tr>
+        <tr>
+            <td>user_code</td>
+            <td>Sorts by the user_code field.</td>
+        </tr>
+        </tbody>
+    </table>
+
     <h3 id="creditmemoavailablemethods">Available Methods</h3>
     {% include 1.0/api/methods/full.html %}
 
