--- a/_includes/1.0/api/invoice.html
+++ b/_includes/1.0/api/invoice.html
@@ -260,6 +260,31 @@
         </tbody>
     </table>
 
+    <h3 id="invoicesorting">Available Sorting Options</h3>
+    <table class="table table-bordered table-striped">
+        <thead>
+        {% include table-header-sorting.html %}
+        </thead>
+        <tbody>
+        <tr>
+            <td>id</td>
+            <td>Sorts by id field.</td>
+        </tr>
+        <tr>
+            <td>date</td>
+            <td>Sorts by date field.</td>
+        </tr>
+        <tr>
+            <td>created_at</td>
+            <td>Sorts by the creation date field.</td>
+        </tr>
+        <tr>
+            <td>user_code</td>
+            <td>Sorts by the user_code field.</td>
+        </tr>
+        </tbody>
+    </table>
+
     <h3 id="invoiceavailablemethods">Available Methods</h3>
     {% include 1.0/api/methods/full.html %}
 
