add Print endpoint documentation for Quote, Invoice and Credit memo

--- a/_includes/1.0/api/creditmemo.html
+++ b/_includes/1.0/api/creditmemo.html
@@ -215,4 +215,8 @@
 
     <h3 id="creditmemoavailablemethods">Available Methods</h3>
     {% include 1.0/api/methods/full.html %}
+
+    <h3 id="creditmemoprint">Print a Credit memo as PDF</h3>
+    {% highlight bash %} GET {{ site.api.base_url }}{{ site.api.v1}}{{ site.resource.credit_memos.url}}/:id/print{% endhighlight %}
+    {% include table-print-http-headers.html %}
 </div>
