--- a/_includes/1.0/api/quote.html
+++ b/_includes/1.0/api/quote.html
@@ -192,4 +192,8 @@
 
     <h3 id="quoteavailablemethods">Available Methods</h3>
     {% include 1.0/api/methods/readonly.html %}
+
+    <h3 id="quoteprint">Print a Quote as PDF</h3>
+    {% highlight bash %} GET {{ site.api.base_url }}{{ site.api.v1}}{{ site.resource.quotes.url}}/:id/print{% endhighlight %}
+    {% include table-print-http-headers.html %}
 </div>
