fix typos and removes unnecessary table column

--- a/_includes/1.0/overview/security/oauth2/errors.html
+++ b/_includes/1.0/overview/security/oauth2/errors.html
@@ -8,7 +8,7 @@
         <div class="panel-heading">Note</div>
         <div class="panel-body">
             When the application starts the flow <b>omitting</b> or sending an <b>invalid</b> <code>redirect_uri</code> or <code>client_id</code>,
-            a <b>default error page</b> will be displayed to the user given that the Authorization Server cannot thrust the <code>redirect_uri</code>.
+            a <b>default error page</b> will be displayed to the user given that the Authorization Server cannot trust the <code>redirect_uri</code>.
         </div>
     </div>
 
