doc: add hint + update json example

--- a/_includes/1.0/api/cashflow-details.html
+++ b/_includes/1.0/api/cashflow-details.html
@@ -27,6 +27,11 @@
             <td>{{ site.format.type.date }}</td>
             <td>The ending date of the period you want to retrieve.</td>
         </tr>
+        <tr>
+            <td>show_hint</td>
+            <td>{{ site.format.type.boolean }}</td>
+            <td>Indicate if you want to get a natural language summary based on the given data (Default false).</td>
+        </tr>
         </tbody>
     </table>
     <h3>JSON Format</h3>
