--- a/_includes/1.0/api/cashflow-overtime.html
+++ b/_includes/1.0/api/cashflow-overtime.html
@@ -29,6 +29,11 @@
             <td>{{ site.format.type.date }}</td>
             <td>The timezone (i.e "Europe/Paris").</td>
         </tr>
+        <tr>
+            <td>show_hint</td>
+            <td>{{ site.format.type.boolean }}</td>
+            <td>Indicate if you want to get a natural language summary based on the given data (Default false).</td>
+        </tr>
         </tbody>
     </table>
 
