--- a/_includes/1.0/overview/security/oauth2/refresh.html
+++ b/_includes/1.0/overview/security/oauth2/refresh.html
@@ -80,7 +80,7 @@ curl -D- --request POST '{{site.oauth2.protocol}}://{{ site.oauth2.domain }}{{si
     "access_token":"xxxxxxxxxx",
     "expires_in":3600,
     "refresh_token":"xxxxxxxxxx",
-    "scope":"offline",
+    "scope":"offline_access",
     "token_type":"bearer"
 }
 {% endhighlight %}
