--- a/_includes/1.0/overview/security/oauth2/exchange.html
+++ b/_includes/1.0/overview/security/oauth2/exchange.html
@@ -77,7 +77,7 @@ curl -D- --request POST '{{site.oauth2.protocol}}://{{ site.oauth2.domain }}{{si
     "access_token":"xxxxxxxxxx",
     "expires_in":3600,
     "refresh_token":"xxxxxxxxxx",
-    "scope":"offline",
+    "scope":"offline_access",
     "token_type":"bearer"
 }
 {% endhighlight %}
@@ -106,7 +106,7 @@ curl -D- --request POST '{{site.oauth2.protocol}}://{{ site.oauth2.domain }}{{si
         </tr>
         <tr>
             <td>scope</td>
-            <td>The scope granted to your application. Right now the only scope supported is <code>offline</code></td>
+            <td>The scope granted to your application. Right now the only scope supported is <code>offline_access</code></td>
         </tr>
         <tr>
             <td>token_type</td>
