update OAuth documentation

--- a/_includes/1.0/overview/security/apikey.html
+++ b/_includes/1.0/overview/security/apikey.html
@@ -9,12 +9,8 @@
 
     <h3>Authenticating using curl</h3>
 
-    {% highlight bash %}
-    curl {{ site.api.base_url }}{{ site.api.v1}}.. {{site.api.auth_pattern}}
-    {% endhighlight %}
+    {% highlight bash %}curl {{ site.api.base_url }}{{ site.api.v1}}.. {{site.api.auth_pattern}}{% endhighlight %}
 
     Example:
-    {% highlight bash %}
-    curl {{ site.api.base_url }}{{ site.api.v1}}{{ site.resource.customers.url}} -u "api_12_e3ab@api.oneup.com:34a352e421d03a4qXqc91f9b48ed7eb02e5"
-    {% endhighlight %}
+    {% highlight bash %}curl {{ site.api.base_url }}{{ site.api.v1}}{{ site.resource.customers.url}} -u "api_12_e3ab@api.oneup.com:34a352e421d03a4qXqc91f9b48ed7eb02e5"{% endhighlight %}
 </div>
