--- a/_includes/1.0/overview/security/oauth2.html
+++ b/_includes/1.0/overview/security/oauth2.html
@@ -1,10 +1,11 @@
 <div id="oauth2" class="group">
-    <h2>OAuth2</h2>
+    <h2>OAuth2 (Staging)</h2>
 
     <h3>Introduction</h3>
 
     <p>OneUp API supports <a href="https://tools.ietf.org/html/rfc6749" target="_blank">OAuth 2.0 protocol</a> for authentication and authorization.</p>
 
-    <p>To use OAuth authorization, you first have to obtain the client credentials. Then your client application requests an authorization code from the OneUp Authorization Server, exchange it for an access token and finally sends that access token to the OneUp API.</p>
-
+    <p>To use OAuth authorization, you first have to obtain the client credentials from OneUp.</p>
+    <p>After we provided you the credentials, your client application will be able to request an authorization code from the OneUp Authorization Server.</p>
+    <p>This code has to be exchanged for an access token. Finally sends use access token to call OneUp API.</p>
 </div>
