--- a/_includes/1.0/overview/security/oauth2/credentials.html
+++ b/_includes/1.0/overview/security/oauth2/credentials.html
@@ -2,9 +2,15 @@
 
     <h2>Client Credentials</h2>
 
-    <p>To obtain a client credential, ask our support team.</p>
+    <p>To obtain a client credentials, please ask our support team.</p>
 
-    <p>When requesting the credential, you must provide us with a callback URL <code>redirect_uri</code>.</p>
+    <p>When requesting the credentials, you must provide us the following information:</p>
+    <ul>
+        <li>Name of your company and application</li>
+        <li>Logo of your application</li>
+        <li>URL of the website of your application</li>
+        <li>A callback URL <code>redirect_uri</code></li>
+    </ul>
 
     <p>The callback URL is the endpoint to which the OneUp Authorization Server will send the authorization code, after the user authenticates and allow your application to consume his data.</p>
 
