--- a/_includes/1.0/overview/security/oauth2/errors.html
+++ b/_includes/1.0/overview/security/oauth2/errors.html
@@ -2,17 +2,11 @@
 
     <h2>Handling Errors</h2>
 
-    <p>When an error occurs during the OAuth2, the user will be redirected to the <code>redirect_uri</code> which was sent during the start of the flow.</p>
+    <p><b>Note:</b> When your application starts the flow, <b>omitting</b> or sending an <b>invalid</b> <code>redirect_uri</code> or <code>client_id</code>,
+        an error page will be displayed to the user given that the Authorization Server cannot trust the <code>redirect_uri</code>.
+    </p>
 
-    <div class="panel panel-warning">
-        <div class="panel-heading">Note</div>
-        <div class="panel-body">
-            When the application starts the flow <b>omitting</b> or sending an <b>invalid</b> <code>redirect_uri</code> or <code>client_id</code>,
-            a <b>default error page</b> will be displayed to the user given that the Authorization Server cannot trust the <code>redirect_uri</code>.
-        </div>
-    </div>
-
-    <p>OneUp Authorization Server will redirect the call and will send the following query parameters:</p>
+    <p>When an error occurs during the OAuth2, the user will be redirected to the <code>redirect_uri</code> with the following query parameters:</p>
 
     <table class="table table-bordered table-striped">
         <thead>
