--- a/_includes/1.0/overview/security/oauth2/using.html
+++ b/_includes/1.0/overview/security/oauth2/using.html
@@ -4,11 +4,13 @@
 
     <p>Your application can use the access token to authenticate requests to OneUp API as well as transparently login the user in OneUp <a href="https://app.oneup.com/" target="_blank">web application</a>.</p>
 
-    <p>For both cases, the application must provide the token in the header <code>Authorization</code> of the request.</p>
+    
 
-    <p>The application uses the <code>Bearer</code> authentication scheme to transmit the access token, as shown in the examples below:</p>
+   
 
     <p><b>OneUp API</b></p>
+    <p>Your application must provide the access token in the header <code>Authorization</code> for each request to the API.</p>
+    <p>The application uses the <code>Bearer</code> authentication scheme to transmit the access token, as shown in the examples below:</p>
 
 {% highlight http %}
 GET {{site.api.v1}}/me HTTP/1.1
@@ -22,16 +24,9 @@ curl -D- --request GET '{{site.api.protocol}}://{{ site.api.domain }}{{site.api.
 {% endhighlight %}
 
     <p><b>OneUp web application</b></p>
-
+You can redirect the user to our web application and automatically log the user in, by redirecting him to the URL below and using the query parameter <code>authentication_token</code>:
 {% highlight http %}
-POST {{site.web.endpoints.authorization.url}}/ HTTP/1.1
-Host: {{ site.web.domain }}
-Authorization: Bearer xxxxxxxxxx
-{% endhighlight %}
-
-{% highlight bash %}
-curl -D- --request POST '{{site.web.protocol}}://{{ site.web.domain }}{{site.web.endpoints.authorization.url}}/' \
---header 'Authorization: Bearer xxxxxxxxxx'
+GET https://app.oneup.com{{site.web.endpoints.authorization.url}}?authentication_token=xxxxx
 {% endhighlight %}
 
 </div>
